# llm-quantization-inference-benchmark

./: .gitignore  README.md  pyproject.toml
configs/: slo.yaml  sweep.yaml
datasets/data/: structured_prompts.json
docs/: DESIGN.md  RUNBOOK_BREV.md  TESTING.md
inferbench/: client.py  datasets_loader.py  metrics.py  models.py  sweep.py  workloads.py
results/: awq_chat_1.json  awq_chat_20.json  awq_chat_5.json  awq_chat_50.json  awq_rag_1.json  awq_rag_20.json  awq_rag_5.json  awq_rag_50.json  awq_summary_1.json  awq_summary_20.json  awq_summary_5.json  awq_summary_50.json  bf16_chat_1.json  bf16_chat_20.json  bf16_chat_5.json  bf16_chat_50.json  bf16_rag_1.json  bf16_rag_20.json  bf16_rag_5.json  bf16_rag_50.json  bf16_summary_1.json  bf16_summary_20.json  bf16_summary_5.json  bf16_summary_50.json  gptq_chat_1.json  gptq_chat_20.json  gptq_chat_5.json  gptq_chat_50.json  gptq_rag_1.json  gptq_rag_20.json  gptq_rag_5.json  gptq_rag_50.json  gptq_summary_1.json  gptq_summary_20.json  gptq_summary_5.json  gptq_summary_50.json  managed_chat_1.json  managed_chat_20.json  managed_chat_5.json  managed_chat_50.json  (+12 more)
scripts/: generate_report.py  run_evals.py  run_managed.py  run_selfhost.py
serve/: README.md  launch_awq.sh  launch_bf16.sh  launch_gptq.sh
tests/: test_charts.py  test_client.py  test_cost.py  test_datasets_loader.py  test_eval_aggregate.py  test_eval_run.py  test_gpu.py  test_grounding.py  test_json_validity.py  test_metrics.py  test_models.py  test_report.py  test_runner.py  test_slo.py  test_smoke.py  test_summary.py  test_sweep.py  test_workloads.py
(+5 files in other folders)
