[project]
name = "inferbench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "datasets>=2.18",
    "transformers>=4.40",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["network: requires dataset/API download"]

[tool.setuptools.packages.find]
include = ["inferbench*"]

[tool.setuptools.package-data]
inferbench = ["data/*.json"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
